projects/service-gateway/dev/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: service-gateway
  namespace: dev
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: http
      namespace: infra
      sectionName: sqr-kr-wildcard-https
  hostnames:
    - dev-gw.sqr.kr
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: service-gateway
          port: 80
